--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vsphere",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Node.js module for performing operations on a vCenter/ESXi host",
   "main": "lib/client.js",
   "author": "reedog117",
@@ -17,7 +17,7 @@
   "dependencies": {
     "joi": "6.x.x",
     "lodash": "3.x.x",
-    "node-vsphere-soap": "git+https://github.com/korzhev/node-vsphere-soap.git"
+    "node-vsphere-soap": "git+https://github.com/korzhev/node-vsphere-soap.git#update"
   },
   "devDependencies": {
     "code": "1.x.x",
